--- a/pages/project1.html
+++ b/pages/project1.html
@@ -11,7 +11,7 @@
     <link 
       rel="preload" 
       as="image" 
-      href="https://res.cloudinary.com/dnptzisuf/image/upload/w_1200,h_670,f_avif,q_auto,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto/v1747049366/welcome_to_tech_trends_desktop_kd0jdv.avif" 
+      href="https://res.cloudinary.com/dnptzisuf/image/upload/w_auto,f_avif,q_auto,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto/v1747049366/welcome_to_tech_trends_desktop_kd0jdv.avif" 
       type="image/avif" 
       media="(min-width: 941px)" 
       fetchpriority="high"
@@ -21,7 +21,7 @@
     <link 
       rel="preload" 
       as="image" 
-      href="https://res.cloudinary.com/dnptzisuf/image/upload/w_768,h_432,f_avif,q_auto,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto/v1746744082/welcome_to_tech_trends_tablet_d9ctvt.avif" 
+      href="https://res.cloudinary.com/dnptzisuf/image/upload/w_auto,f_avif,q_auto,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto/v1746744082/welcome_to_tech_trends_tablet_d9ctvt.avif" 
       type="image/avif" 
       media="(min-width: 681px) and (max-width: 940px)" 
       fetchpriority="high"
@@ -115,7 +115,7 @@
         <picture>
           <!-- Desktop (≥ 941px) -->
           <source
-            srcset="https://res.cloudinary.com/dnptzisuf/image/upload/w_1200,h_670,f_avif,q_auto,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto/v1747049366/welcome_to_tech_trends_desktop_kd0jdv.avif"
+            srcset="https://res.cloudinary.com/dnptzisuf/image/upload/w_auto,f_avif,q_auto,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto/v1747049366/welcome_to_tech_trends_desktop_kd0jdv.avif"
             type="image/avif"
             media="(min-width: 941px)"
             sizes="100vw"
@@ -124,7 +124,7 @@
 
           <!-- Tablet (681px–940px) -->
           <source
-            srcset="https://res.cloudinary.com/dnptzisuf/image/upload/w_768,h_432,f_avif,q_auto,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto/v1746744082/welcome_to_tech_trends_tablet_d9ctvt.avif"
+            srcset="https://res.cloudinary.com/dnptzisuf/image/upload/w_auto,f_avif,q_auto,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto/v1746744082/welcome_to_tech_trends_tablet_d9ctvt.avif"
             type="image/avif"
             media="(min-width: 681px)"
           />
