replaced table with image

--- a/pages/project1.html
+++ b/pages/project1.html
@@ -133,9 +133,9 @@
           <img
             src="/img/welcome_to_tech_trends_mobile.avif"
             width="480"
-            height="293"
+            height="284"
             alt="Tech Trends Blog Hero Image showcasing a modern, futuristic design with technology visuals..."
-            style="object-fit: cover; width: 100%; height: auto; aspect-ratio: 480 / 293"
+            style="object-fit: cover; width: 100%; height: auto; aspect-ratio: 480 / 284"
             fetchpriority="high"
             decoding="async"
             loading="eager"
@@ -275,65 +275,35 @@
               </div>
             </div>
             <div class="resume-border">
-              <div class="grade-text">
-                <div class="grades">
-                  <div class="grade-title">
-                    <h3>desktop</h3>
-                  </div>
-                  <div class="grade-container" id="desktop-grade2">
-                    <div class="grade-header"><h3>page name</h3></div>
-                    <div class="grade-header"><h3>performance</h3></div>
-                    <div class="grade-header"><h3>accessibility</h3></div>
-                    <div class="grade-header"><h3>best practices</h3></div>
-                    <div class="grade-header"><h3>seo</h3></div>
-
-                    <div class="grade-item"><h3>homepage</h3></div>
-                    <div class="grade-item"><p>100</p></div>
-                    <div class="grade-item"><p>100</p></div>
-                    <div class="grade-item"><p>100</p></div>
-                    <div class="grade-item"><p>100</p></div>
-
-                    <div class="grade-item"><h3>all category<br> pages</h3></div>
-                    <div class="grade-item"><p>100</p></div>
-                    <div class="grade-item"><p>100</p></div>
-                    <div class="grade-item"><p>100</p></div>
-                    <div class="grade-item"><p>100</p></div>
-
-                    <div class="grade-item"><h3>category page</h3></div>
-                    <div class="grade-item"><p>100</p></div>
-                    <div class="grade-item"><p>100</p></div>
-                    <div class="grade-item"><p>100</p></div>
-                    <div class="grade-item"><p>100</p></div>
-
-                    <div class="grade-item"><h3>category page</h3></div>
-                    <div class="grade-item"><p>100</p></div>
-                    <div class="grade-item"><p>100</p></div>
-                    <div class="grade-item"><p>100</p></div>
-                    <div class="grade-item"><p>100</p></div>
-
-                    <div class="grade-item"><h3>article page</h3></div>
-                    <div class="grade-item"><p>100</p></div>
-                    <div class="grade-item"><p>100</p></div>
-                    <div class="grade-item"><p>100</p></div>
-                    <div class="grade-item"><p>100</p></div>
-
-                    <div class="grade-item"><h3>upload page</h3></div>
-                    <div class="grade-item"><p>100</p></div>
-                    <div class="grade-item"><p>100</p></div>
-                    <div class="grade-item"><p>100</p></div>
-                    <div class="grade-item"><p>100</p></div>
-
-                    <div class="grade-item"><h3>log in page</h3></div>
-                    <div class="grade-item"><p>100</p></div>
-                    <div class="grade-item"><p>100</p></div>
-                    <div class="grade-item"><p>100</p></div>
-                    <div class="grade-item"><p>100</p></div>
-
-                    <div class="grade-item"><h3>privacy policy</h3></div>
-                    <div class="grade-item"><p>100</p></div>
-                    <div class="grade-item"><p>100</p></div>
-                    <div class="grade-item"><p>100</p></div>
-                    <div class="grade-item"><p>100</p></div>
+              <div class="border-white">
+                <div class="border-black">
+                  <div class="border-black">
+                    <div class="grade-table" id="grade-table">
+                      <picture>
+                        <source
+                          srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,fl_lossy,fl_force_strip,w_auto,dpr_auto,c_fill,g_auto/v1747614027/desktop-grades_kretmv.avif"
+                          type="image/avif"
+                          media="(min-width: 1200px)"
+                          sizes="100vw"
+                        />
+                        <source
+                          srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,fl_lossy,fl_force_strip,w_auto,dpr_auto,c_fill,g_auto/v1747614880/desktop-grade-tablet_koy6mo.avif"
+                          type="image/avif"
+                          media="(min-width: 481px) and (max-width: 1199px)"
+                          sizes="100vw"
+                        />
+                        <img 
+                          src="/img/desktop-grade-mobile.avif"
+                          alt="Tech Trends Blog SEO grade result showing performance before optimization"
+                          width="409"
+                          height="344"
+                          style="aspect-ratio: 409 / 344; height: auto; object-fit: cover; display: block; width: 96%; "
+                          loading="lazy"
+                        fetchpriority="auto"
+                          decoding="async"
+                        />
+                      </picture>
+                    </div>
                   </div>
                 </div>
               </div>
@@ -419,34 +389,36 @@
               </div>
             </div>
             <div class="resume-border">
-              <div class="grade-text">
-                <div class="grades">
-                  <div class="grade-title">
-                  <h3>mobile</h3>
-                </div>
-                <div class="grade-container" id="desktop-grade2">
-                  <div class="grade-header"><h3>page name</h3></div>
-                  <div class="grade-header"><h3>performance</h3></div>
-                  <div class="grade-header"><h3>accessibility</h3></div>
-                  <div class="grade-header"><h3>best practices</h3></div>
-                  <div class="grade-header"><h3>seo</h3></div>
-                  <div class="grade-item"><h3>homepage</h3></div>
-                  <div class="grade-item"><p>98</p></div>
-                  <div class="grade-item"><p>100</p></div>
-                  <div class="grade-item"><p>100</p></div>
-                  <div class="grade-item"><p>100</p></div>
-
-                  <div class="grade-item"><h3>category page</h3></div>
-                  <div class="grade-item"><p>98</p></div>
-                  <div class="grade-item"><p>100</p></div>
-                  <div class="grade-item"><p>100</p></div>
-                  <div class="grade-item"><p>100</p></div>
-
-                  <div class="grade-item"><h3>category page</h3></div>
-                  <div class="grade-item"><p>98</p></div>
-                  <div class="grade-item"><p>100</p></div>
-                  <div class="grade-item"><p>100</p></div>
-                  <div class="grade-item"><p>100</p></div>
+              <div class="border-white">
+                <div class="border-black">
+                  <div class="border-black">
+                    <div class="grade-table" id="grade-table">
+                      <picture>
+                        <source
+                          srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,fl_lossy,fl_force_strip,w_auto,dpr_auto,c_fill,g_auto/v1747614027/mobile-grades_upcfff.avif"
+                          type="image/avif"
+                          media="(min-width: 1200px)"
+                          sizes="100vw"
+                        />
+                        <source
+                          srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,fl_lossy,fl_force_strip,w_auto,dpr_auto,c_fill,g_auto/v1747614880/mobile-grade-tablet_xbb08y.avif"
+                          type="image/avif"
+                          media="(min-width: 481px) and (max-width: 1199px)"
+                          sizes="100vw"
+                        />
+                        <img 
+                          src="/img/mobile-grade-mobile.avif"
+                          alt="Tech Trends Blog SEO grade result showing performance before optimization"
+                          width="405"
+                          height="344"
+                          style="aspect-ratio: 409 / 344; width: 96%; height: auto; object-fit: cover; display: block; "
+                          loading="lazy"
+                        fetchpriority="auto"
+                          decoding="async"
+                        />
+                      </picture>
+                    </div>
+                  </div>
                 </div>
               </div>
             </div>
@@ -561,7 +533,7 @@
               </div>
             </div>
           </section>
-          <section id="contact">
+          <section id="cta-section">
             <article class="resume-border" id="section4" >
               <div class="resume-border" >
                 <div class="border-white">
