removed button, was testing

--- a/pages/project1.html
+++ b/pages/project1.html
@@ -173,12 +173,12 @@
               <h3>take me to the</h3>
             </div>
             <div class="button-grid">
-              <button class="click-me">
+              <div class="click-me">
                 <a href="https://tech-trends-blog.netlify.app" target="_blank" rel="noopener noreferrer">design decoded</a>
-              </button>
-              <button class="click-me">  
+              </div>
+              <div class="click-me">  
                 <a href="https://github.com/Allison2002/tech-trends.git" target="_blank" rel="noopener noreferrer">&lt; inspect the code &gt;</a>
-              </button>
+              </div>
             </div> 
           </div>
         </article> 
